# scrawble-library

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
assets/: english.json  help.txt
src/: CMakeLists.txt  handle.h
src/scrawble/: CMakeLists.txt  algorithm.cpp  algorithm.h  arc.cpp  arc.h  bag.cpp  bag.h  board.cpp  board.h  config.cpp  config.h  file_reader.cpp  file_reader.h  gaddag.cpp  gaddag.h  game.cpp  game.h  game_logic.cpp  game_logic.h  graph.h  io.cpp  io.h  main.cpp  node.cpp  node.h  path.cpp  path.h  player.cpp  player.h  rack.cpp  rack.h  scrawble.cpp  scrawble.h  tile.cpp  tile.h  util.h  vt100.cpp  vt100.h  word.cpp  word.h
src/scrawble/attempt1/: algorithm.cpp  gaddag.cpp  move.h  node.cpp  node.h  trie.h
src/scrawble/attempt2/: arc.cpp  arc.h  gaddag.cpp  node.cpp  node.h  word.cpp  word.h
src/scrawble/attempt3/: algorithm.h  gaddag.cpp  gaddag.h  move.h  node.cpp  node.h  trie.cpp  trie.h  trie_factory.h
src/scrawble/core/: algorithm.h  gaddag.cpp  gaddag.h  move.h  node.cpp  node.h  trie.h  trie_factory.h
src/scrawble/lexicon/: algorithm.h  gaddag.cpp  gaddag.h  move.h  node.cpp  node.h  trie.h
src/util/: file_reader.h  util.h
tests/: CMakeLists.txt  graph.test.cpp  main.test.cpp  scrawble.test.cpp
tests/assets/: english.json  help.txt
